k8s/sonarqube/set-vm.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: set-vm-max-map-count
  namespace: kube-system
spec:
  selector:
    matchLabels:
      name: set-vm-max-map-count
  template:
    metadata:
      labels:
        name: set-vm-max-map-count
    spec:
      hostPID: true
      containers:
      - name: sysctl
        image: busybox
        command: ["sh", "-c", "sysctl -w vm.max_map_count=262144 && sleep 3600"]
        securityContext:
          privileged: true
        volumeMounts:
        - name: proc
          mountPath: /proc
      volumes:
      - name: proc
        hostPath:
          path: /proc
      restartPolicy: Always
