k8s/sonarqube/value.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ingress 
  namespace: sonarqube   
  labels:
    app: sonarqube
  annotations:
    kubernetes.io/ingress.class: "gce".
    networking.gke.io/managed-certificates: "sonarqube-managed-certificate"
    ingress.gcp.kubernetes.io/read-timeout-seconds: "300" # Contoh: 5 menit
    ingress.gcp.kubernetes.io/idle-timeout-seconds: "300" # Contoh: 5 menit
    ingress.gcp.kubernetes.io/hsts-max-age: "31536000" # Contoh: 1 tahun
    ingress.gcp.kubernetes.io/hsts-include-subdomains: "true"
    ingress.gcp.kubernetes.io/hsts-preload: "true"

    # Jika Anda ingin menggunakan IP statis yang sudah dialokasikan di Google Cloud:
    # kubernetes.io/ingress.global-static-ip-name: "nama-ip-eksternal-statis-anda"

spec:
  tls:
    - hosts:
        - sonarqube.yourdomain.com # Ganti dengan domain/subdomain Anda yang sebenarnya

  rules:
    - host: sonarqube.yourdomain.com 
      http:
        paths:
          - path: /                  
            pathType: Prefix          
            backend:
              service:
                name: sonarqube       
                port:
                  number: 9000
